# jagopos-microservice

./: .gitignore  Dockerfile  app.yaml  cloudbuild.yaml  config.py  main.py  pyproject.toml  requirement.txt  scratch.py  supported_font.txt
