[tool.poetry]
name = "poster-creation"
version = "0.1.0"
description = ""
authors = ["suresh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
pytesseract = "^0.3.13"
matplotlib = "^3.9.2"
easyocr = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
